Grid being highlighted with 'In' and 'Out' sign.. Everything works fine now..

--- a/src/app/welcomepage/welcome.component.html
+++ b/src/app/welcomepage/welcome.component.html
@@ -1,11 +1,9 @@
 <!--The whole content below can be removed with the new code.-->
-<div style="text-align:center">
+<div class="welcome-page">
     <h1>
       Drive the Robot
     </h1>
-    <img src="assets/robot_logo.jpg" width="300px"/><br/>
-    <!-- <img src="assets/start.png" width="50px"/><br/>
-    <img src="assets/start2.jpg" width="50px"/><br/>
-    <img src="assets/start3.png" width="50px"/> -->
-    <img src="assets/start4.png" width="80px" routerLink="/robot"/>
+    <img src="assets/robot_logo.jpg" class="robot-logo"/><br/>
+    <a href='https://www.freepik.com/free-vector/coloured-robot-design_901196.htm' target="_blank">Image Credit</a><br/>
+    <img src="assets/start4.png" routerLink="/robot" class="play-button"/>
 </div>
