--- a/src/app/robot/robot.component.css
+++ b/src/app/robot/robot.component.css
@@ -26,3 +26,13 @@
     text-align: center;
     margin-top: 10px;
 }
+.start-cell {
+    font-size: 18px;
+    color: #4CAF50;
+    text-align: center;
+}
+.end-cell {
+    font-size: 18px;
+    color: #ff0000;
+    text-align: center;
+}
