--- a/src/app/robot/robot.component.html
+++ b/src/app/robot/robot.component.html
@@ -4,39 +4,139 @@
 <div class="robot-grid-container">
     <div class="container">
         <div class="row">
-            <div class="col"> (0, 4) </div>
-            <div class="col"> (1, 4) </div>
-            <div class="col"> (2, 4) </div>
-            <div class="col"> (3, 4) </div>
-            <div class="col"> (4, 4) </div>
+            <div class="col"> 
+                (0, 4) 
+                <div *ngIf="startCell=='04'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='04'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (1, 4) 
+                <div *ngIf="startCell=='14'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='14'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (2, 4)
+                <div *ngIf="startCell=='24'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='24'" class="end-cell">Stop</div> 
+            </div>
+            <div class="col"> 
+                (3, 4)
+                <div *ngIf="startCell=='34'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='34'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (4, 4)
+                <div *ngIf="startCell=='44'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='44'" class="end-cell">Stop</div>
+            </div>
         </div>
         <div class="row">
-            <div class="col"> (0, 3) </div>
-            <div class="col"> (1, 3) </div>
-            <div class="col"> (2, 3) </div>
-            <div class="col"> (3, 3) </div>
-            <div class="col"> (4, 3) </div>
+            <div class="col"> 
+                (0, 3)
+                <div *ngIf="startCell=='03'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='03'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (1, 3)
+                <div *ngIf="startCell=='13'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='13'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (2, 3)
+                <div *ngIf="startCell=='23'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='23'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (3, 3)
+                <div *ngIf="startCell=='33'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='33'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (4, 3)
+                <div *ngIf="startCell=='43'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='43'" class="end-cell">Stop</div>
+            </div>
         </div>
         <div class="row">
-            <div class="col"> (0, 2) </div>
-            <div class="col"> (1, 2) </div>
-            <div class="col"> (2, 2) </div>
-            <div class="col"> (3, 2) </div>
-            <div class="col"> (4, 2) </div>
+            <div class="col"> 
+                (0, 2)
+                <div *ngIf="startCell=='02'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='02'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (1, 2)
+                <div *ngIf="startCell=='12'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='12'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (2, 2)
+                <div *ngIf="startCell=='22'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='22'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (3, 2)
+                <div *ngIf="startCell=='32'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='32'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (4, 2)
+                <div *ngIf="startCell=='42'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='42'" class="end-cell">Stop</div>
+            </div>
         </div>
         <div class="row">
-            <div class="col"> (0, 1) </div>
-            <div class="col"> (1, 1) </div>
-            <div class="col"> (2, 1) </div>
-            <div class="col"> (3, 1) </div>
-            <div class="col"> (4, 1) </div>
+            <div class="col"> 
+                (0, 1)
+                <div *ngIf="startCell=='01'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='01'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (1, 1)
+                <div *ngIf="startCell=='11'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='11'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (2, 1)
+                <div *ngIf="startCell=='21'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='21'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (3, 1)
+                <div *ngIf="startCell=='31'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='31'" class="end-cell">Stop</div>
+            </div>
+            <div class="col">
+                (4, 1)
+                <div *ngIf="startCell=='41'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='41'" class="end-cell">Stop</div>
+            </div>
         </div>
         <div class="row">
-            <div class="col"> (0, 0) </div>
-            <div class="col"> (1, 0) </div>
-            <div class="col"> (2, 0) </div>
-            <div class="col"> (3, 0) </div>
-            <div class="col"> (4, 0) </div>
+            <div class="col"> 
+                (0, 0)
+                <div *ngIf="startCell=='00'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='00'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (1, 0)
+                <div *ngIf="startCell=='10'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='10'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (2, 0)
+                <div *ngIf="startCell=='20'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='20'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (3, 0)
+                <div *ngIf="startCell=='30'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='30'" class="end-cell">Stop</div>
+            </div>
+            <div class="col"> 
+                (4, 0)
+                <div *ngIf="startCell=='40'" class="start-cell">Start</div>
+                <div *ngIf="endCell=='40'" class="end-cell">Stop</div>
+            </div>
         </div>
     </div>
 </div>
