Error is being shown now in case of invalid input

--- a/src/app/robot/robot.component.html
+++ b/src/app/robot/robot.component.html
@@ -145,6 +145,7 @@
         <div class="col">
             Input
             <textarea class="form-control" rows="6" [(ngModel)]="userInput"></textarea>
+            <div *ngIf="inputInvalid==true" class="errormsg">Input invalid</div>
         </div>
         <div class="col">
             Output
