Updated packages to latest..

--- a/src/app/welcomepage/welcome.component.html
+++ b/src/app/welcomepage/welcome.component.html
@@ -4,6 +4,6 @@
       Drive the Robot
     </h1>
     <img src="assets/robot_logo.jpg" class="robot-logo"/><br/>
-    <a href='https://www.freepik.com/free-vector/coloured-robot-design_901196.htm' target="_blank">Image Credit</a><br/>
+    <!-- <a href='https://www.freepik.com/free-vector/coloured-robot-design_901196.htm' target="_blank">Image Credit</a><br/> -->
     <img src="assets/start4.png" routerLink="/robot" class="play-button"/>
 </div>
