> Broke multiple linear if..else blocks (in robot.ts) with more logical smaller methods (e.g. rotateRightOrLeft, moveByOneStep in position.ts) > Wherever suitable replaced if..else blocks with Switch case and Ternary operator to improve readability and efficiency > Made Position class (position.ts) more independent and self-contained. Now Position class holds position manipulation logic as well > Replaced hard coded string literals (e.g. “RIGHT”, “NORTH” etc.) with enum constants as it will make easier to handle future configuration changes. (E.g. Change program to consider “N” instead of “NORTH” as a valid input)

--- a/src/app/robot/robot.component.html
+++ b/src/app/robot/robot.component.html
@@ -154,7 +154,7 @@
     </div>
     <div class="row button-container">
         <div class="col">
-            <button type="button" class="btn btn-success" (click)="navigateTheRobot()">Drive the Robot</button>
+            <button type="button" class="btn btn-success" (click)="execute()">Drive the Robot</button>
         </div>
     </div>
 </div>
